# muvera-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: bench_speed.py
examples/: basic_usage.py  colbert_nanobeir.py
muvera/: __init__.py  _rust_kernels.pyi  helper.py  muvera.py
scripts/: generate_test_fixtures.py
src/: fill_empty.rs  gray_code.rs  lib.rs  partition.rs  scatter.rs
tests/: test_helper.py  test_muvera.py  test_real_colbert.py  test_reference.py  test_rust_equivalence.py
tests/fixtures/colbert_nanobeir/: documents.npz  qrels.json  queries.npz
