[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muvera-python"
version = "0.1.1"
description = "MuVERA: Multi-Vector Retrieval via Fixed Dimensional Encodings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "craftsangjae" },
]
keywords = ["muvera", "muvera-python", "multi-vector", "retrieval", "embedding", "fixed-dimensional-encoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "scipy>=1.13.1",
]

[project.urls]
Homepage = "https://github.com/craftsangjae/muvera-python"
Repository = "https://github.com/craftsangjae/muvera-python"
Issues = "https://github.com/craftsangjae/muvera-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["muvera"]

[tool.hatch.build.targets.sdist]
include = ["muvera/", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "D",      # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module (module docstring already present)
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["muvera"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
